# cutils

./: CMakeLists.txt
lib/base64/include/: base64.h
lib/base64/src/: base64.c
lib/dynarr/: Makefile
lib/dynarr/include/: dynarr.h
lib/dynarr/src/: dynarr.c
lib/hfm/include/: hfm.h
lib/hfm/src/: hfm.c
lib/types/include/: types.h
test/test_base64/: test_base64.c
test/test_hfm/: test_hfm.c
